# odoo17-start

./: .gitignore  pyproject.toml  requirements.txt
