[tool.poetry]
name = "odoo17-start"
version = "0.1.0"
description = ""
authors = ["7wanaio <1296032384@qq.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
babel = "^2.14.0"
chardet = "^5.2.0"
cryptography = "^42.0.5"
decorator = "^5.1.1"
docutils = "^0.20.1"
ebaysdk = "^2.2.0"
freezegun = "^1.4.0"
geoip2 = "^4.8.0"
gevent = "^24.2.1"
greenlet = "^3.0.3"
idna = "^3.6"
jinja2 = "^3.1.3"
libsass = "^0.23.0"
lxml = "^5.1.0"
markupsafe = "^2.1.5"
num2words = "^0.5.13"
ofxparse = "^0.21"
passlib = "^1.7.4"
pillow = "^10.2.0"
polib = "^1.2.0"
psutil = "^5.9.8"
psycopg2 = "^2.9.9"
pydot = "^2.0.0"
pyopenssl = "^24.1.0"
pypdf2 = "^3.0.1"
pyserial = "^3.5"
python-dateutil = "^2.9.0.post0"
python-ldap = "^3.4.4"
python-stdnum = "^1.19"
pytz = "^2024.1"
to = "^0.3"
pyusb = "^1.2.1"
qrcode = "^7.4.2"
reportlab = "^4.1.0"
requests = "^2.31.0"
rjsmin = "^1.2.2"
urllib3 = "^2.2.1"
vobject = "^0.9.6.1"
werkzeug = "^3.0.1"
xlrd = "^2.0.1"
xlsxwriter = "^3.2.0"
xlwt = "^1.3.0"
zeep = "^4.2.1"
aiohttp = "^3.9.3"
aiosignal = "^1.3.1"
async-timeout = "^4.0.3"
attrs = "^23.2.0"
beautifulsoup4 = "^4.12.3"
certifi = "^2024.2.2"
cffi = "^1.16.0"
charset-normalizer = "^3.3.2"
colorama = "^0.4.6"
docopt = "^0.6.2"
frozenlist = "^1.4.1"
isodate = "^0.6.1"
maxminddb = "^2.5.2"
multidict = "^6.0.5"
platformdirs = "^4.2.0"
pyasn1-modules = "^0.3.0"
pyasn1 = "^0.5.1"
pycparser = "^2.21"
pyparsing = "^3.1.2"
pypng = "^0.20220715.0"
requests-file = "^2.0.0"
requests-toolbelt = "^1.0.0"
setuptools = "^69.1.1"
six = "^1.16.0"
soupsieve = "^2.5"
typing-extensions = "^4.10.0"
yarl = "^1.9.4"
zope-event = "^5.0"
zope-interface = "^6.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
